# Tycoon_

./: .gitignore  package.json  readme.MD
.github/workflows/: ci.yml  contract-ci.yml  frontend-ci.yml  test.yml
backend/: .env.example  .gitignore  LOGGING.md  README.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tsconfig.json
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/test/: app.e2e-spec.ts  auth.e2e-spec.ts  game-idempotency.e2e-spec.ts  games-replay.e2e-spec.ts  jest-e2e.json  redis.integration.spec.ts
contract/: .gitignore
contract/ci/: wasm-size-budget.json
contract/contracts/tycoon-token/: .gitignore  ACCEPTANCE_CRITERIA.md  Cargo.toml  Makefile  README.md  SECURITY_REVIEW_CHECKLIST.md
contract/contracts/tycoon-token/src/: deprecation_tests.rs  error_branch_tests.rs  integration_coverage.rs  lib.rs  security_review_tests.rs  simulation_scenarios.rs  test.rs
contract/src/: main.rs
frontend/: .size-limit.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/.storybook/: preview.ts
frontend/app/: layout.tsx
frontend/components/: AppKitProviderWrapper.tsx
frontend/config/: index.tsx  starknet-provider.tsx
frontend/context/: wallet-provider.tsx
frontend/docs/: JOINROOM_STRICTNESS_IMPROVEMENTS.md  JOIN_ROOM_IMPLEMENTATION_GUIDE.md  JOIN_ROOM_IMPROVEMENTS.md  SW-FE-741-route-layout-accessibility-focus-order.md  SW-FE-743-offline-route-accessibility-focus-order.md  (+4 more)
shop-api/: package-lock.json  package.json
stellar-wave-issues/: README.md
(+578 files in other folders)
